applications/scratch-9764039/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-9764039
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-9764039

  template:
    metadata:
      labels:
        app: scratch-9764039

    spec:
      containers:
      - name: scratch-9764039
        image: scratch:latest

        ports:
        - containerPort: 80
