applications/scratch-9764039/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-9764039
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-9764039.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-9764039

            port:
              number: 80
